# indicator-transfer

./: CMakeLists.txt  HACKING  MERGE-REVIEW  README  TODO
data/: CMakeLists.txt  com.canonical.indicator.transfer  indicator-transfer.conf.in  indicator-transfer.desktop.in  indicator-transfer.pc.in  indicator-transfer.service.in  indicator-transfer.upstart.desktop.in
debian/: changelog  control  copyright  indicator-transfer-dev.install  indicator-transfer-download-manager.install  indicator-transfer.install  libindicator-transfer-dev.install  libindicator-transfer0.install  rules  watch
include/: CMakeLists.txt
include/transfer/: CMakeLists.txt  actions-live.h  actions.h  controller.h  dbus-shared.h  dm-source.h  exporter.h  gactions.h  gronk.h  menu.h  model.h  multisource.h  plugin-source.h  source-dbus.h  source-plugin.h  source.h  transfer-controller-mock.h  transfer-controller.h  transfer-mock.h  transfer-source-mock.h  transfer-source.h  transfer.h  view-console.h  view-gmenu.h  view.h  world-dbus.h  world.h
po/: POTFILES.in
src/: CMakeLists.txt  actions-live.cpp  controller.cpp  dbus-source.cpp  dm-plugin.cpp  dm-source.cpp  exporter.cpp  gactions.cpp  gronk.cpp  main.cpp  menu.cpp  model.cpp  multisource.cpp  plugin-source.cpp  source-plugin.cpp  source.cpp  transfer-controller-mock.cpp  transfer-controller.cpp  transfer-mock.cpp  transfer-source-mock.cpp  transfer-source.cpp  transfer.cpp  view-console.cpp  view-gmenu.cpp  view.cpp  world-dbus.cpp  world-plugin.cpp  world.cpp
src/dm-plugin/: CMakeLists.txt  dm-plugin.cpp  dm-source.cpp
tests/: CMakeLists.txt  actions-mock.h  controller-mock.h  glib-fixture.h  manual  mock-source-plugin.cpp  simple-download.py  source-mock-plugin.cpp  source-mock.h  test-actions-live.cpp  test-controller.cpp  test-exporter.cpp  test-gactions.cpp  test-hello.cpp  test-menus.cpp  test-mocks.cpp  test-multisource.cpp  test-plugin-source.cpp  test-source-plugin.cpp  test-view-gmenu.cpp  test-world-plugin.cpp  world-mock-plugin.cpp  world-mock.h
tests/manual-tests/: simple-download.py  simple-download.txt
